# SR-RT_engine

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  create_gui_apps.command  image_renderer.command  main.cpp  package_standalone_apps.command  quality_regression.sh  video_renderer.command
.github/workflows/: macos-apps.yml
Image Renderer.app/Contents/: Info.plist
Image Renderer.app/Contents/MacOS/: launch
Image Renderer.app/Contents/Resources/: image_renderer.icns
Video Renderer.app/Contents/: Info.plist
Video Renderer.app/Contents/MacOS/: launch
docs/: ARCHITECTURE.md  GUI.md  SCENES.md  VIDEO_FORMULAS.md
include/accel/: bvh.h
include/app/: arg_parsers.h  cli.h  options_schema.h  run_config.h
include/core/: aabb.h  hit.h  material.h  ray.h
include/geometry/: constant_medium.h  plane.h  rectangle.h  sphere.h  triangle.h
include/materials/: anisotropic_ggx_metal.h  checker_lambertian.h  checker_material.h  clearcoat.h  coated_plastic.h  conductor_metal.h  dielectric.h  emissive.h  ggx_metal.h  isotropic.h  lambertian.h  mirror.h  sheen.h  subsurface.h  textured_lambertian.h  thin_transmission.h
include/math/: vec3.h
include/render/: aberration.h  atmosphere.h  camera_controls.h  constants.h  integrator.h  optics.h  output.h  output_naming.h  output_pipeline.h  quality.h  renderer.h  rng.h  sampling.h  settings.h  texture.h
include/scene/: lighting_presets.h  lights.h  model_loader.h  polyhedra_builder.h  scatter_material_factory.h  scene.h  scene_builder.h  scene_presets.h  scene_registry.h
presets/video/: Hyperbolic.json  Hyperbolic_Look_Around.json  Hyperbolic_Look_Around_Test.json  Hyperbolic_Newton_20x.json  Hyperbolic_Newton_Mult-X_Speed.json  Hyperbolic_Newton_Start.json  Hyperbolic_Rotating.json  Hyperbolic_Test.json  Look_Around.json  Rotating.json  Turn_Around.json
src/accel/: bvh.cpp
src/app/: arg_parsers.cpp  cli.cpp  options_schema.cpp  run_config.cpp
src/geometry/: constant_medium.cpp  plane.cpp  rectangle.cpp  sphere.cpp  triangle.cpp
src/materials/: anisotropic_ggx_metal.cpp  checker_lambertian.cpp  checker_material.cpp  clearcoat.cpp  coated_plastic.cpp  conductor_metal.cpp  dielectric.cpp  emissive.cpp  ggx_metal.cpp  isotropic.cpp  lambertian.cpp  mirror.cpp  sheen.cpp  subsurface.cpp  textured_lambertian.cpp  thin_transmission.cpp
src/render/: aberration.cpp  atmosphere.cpp  camera_controls.cpp  integrator.cpp  optics.cpp  output.cpp  output_naming.cpp  output_pipeline.cpp  quality.cpp  renderer.cpp  rng.cpp  sampling.cpp  texture.cpp
src/scene/: lighting_presets.cpp  model_loader.cpp  polyhedra_builder.cpp  scatter_material_factory.cpp  scene.cpp  scene_builder.cpp  scene_presets.cpp  scene_registry.cpp
tests/: aberration_test.cpp
tools/anim/: render_row_scatter_hyperbolic.py
tools/gui/: README.md  button_styles.py  gui_constants.py  gui_runtime.py  image_app_entry.py  image_config_builder.py  image_io.py  oidn_postprocess.py  options_schema.py  raytracer_animation_gui.py  raytracer_gui.py  render_settings_dialog.py  runtime_diagnostics.py  scene_controls.py  scene_registry.py  settings_summary.py  video_app_entry.py  video_config_builder.py  video_encoder.py  video_formula.py  video_job_runner.py  video_manifest.py  video_preset_manager.py  video_ui_state.py  video_widgets.py  video_window.py  video_worker.py
(+18 files in other folders)
